# hindley-milner-inferer

./: .gitignore  HindleyMilnerInferer.cabal  HindleyMilnerInferer.hs  README.md  inferer.hi  inferer.hs  simply_typed_lambda_calculus.hs  simply_typed_lambda_calculus.hs~
HindleyMilnerInferer/: SimplyTypedLambdaCalculus.hs
